--- a/index.html
+++ b/index.html
@@ -1,146 +1,77 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<title>GUNPLA</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+<style>
+body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
+body {font-size:16px;}
+.w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
+.w3-half img:hover{opacity:1}
+</style>
+<body>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>GUNPLA SHOP</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
-    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
-    <link href="https://www.pikpng.com/pngl/m/440-4408734_neo-zeon-logo-by-delpha-bogan-neo-zeon.png" rel="shortcut icon" type="image/x-icon" />
-</head>
+<!-- Sidebar/menu -->
+<nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
+  <div class="w3-container">
+    <h3 class="w3-padding-64"><b>GUNDAM<br>GUNPLA</b></h3>
+  </div>
+  <div class="w3-bar-block">
+    <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
+    <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">HIGH GRADE</a> 
+    <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">REAL GRADE</a> 
+    <a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">MASTER GRADE</a> 
+    <a href="#packages" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">PERFECT GRADE</a> 
+  </div>
+</nav>
 
-<body id="page-top">
-    <div id="wrapper">
-        <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
-            <div class="container-fluid d-flex flex-column p-0">
-                <a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
-                    <div class="sidebar-brand-icon rotate-n-15"><i class="fas fa-jedi"></i></div>
-                    <div class="sidebar-brand-text mx-3"><span>Gungunpla</span></div>
-                </a>
-                <hr class="sidebar-divider my-0">
-                <ul class="nav navbar-nav text-light" id="accordionSidebar">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html"><i class="fas fa-circle"></i><span>หน้าแรก</span></a>
-                        <a class="nav-link active" href="gunpla.html"><i class="fas fa-circle"></i><span>GUNDAM GUNPLA</span></a>
-                        <a class="nav-link active" href="marker.html"><i class="fas fa-circle"></i><span>GUNDAM MARKER</span></a>
-                        <a
-                            class="nav-link active" href="tools.html"><i class="fas fa-circle"></i><span>BUILDING TOOLS</span></a><a class="nav-link active" href="index.html"><i class="fas fa-circle"></i><span>DISPLAY ACCESSORIES</span></a><a class="nav-link active" href="index.html"><i class="fas fa-circle"></i><span>PAINTING TOOLS</span></a>
-                            <a
-                                class="nav-link active" href="colors.html"><i class="fas fa-circle"></i><span>COLORS &amp; PAINTS</span></a>
-                    </li>
-                </ul>
-                <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
-            </div>
-        </nav>
-        <div class="d-flex flex-column" id="content-wrapper">
-            <div id="content">
-                <nav class="navbar navbar-light navbar-expand bg-white shadow mb-4 topbar static-top">
-                    <div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle mr-3" id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button>
-                        <form class="form-inline d-none d-sm-inline-block mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                            <div class="input-group"><input class="bg-light form-control border-0 small" type="text" placeholder="Search for ...">
-                                <div class="input-group-append"><button class="btn btn-primary py-0" type="button"><i class="fas fa-search"></i></button></div>
-                            </div>
-                        </form>
-                        <ul class="nav navbar-nav flex-nowrap ml-auto">
-                            <li class="nav-item dropdown d-sm-none no-arrow"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#"><i class="fas fa-search"></i></a>
-                                <div class="dropdown-menu dropdown-menu-right p-3 animated--grow-in" role="menu" aria-labelledby="searchDropdown">
-                                    <form class="form-inline mr-auto navbar-search w-100">
-                                        <div class="input-group"><input class="bg-light form-control border-0 small" type="text" placeholder="Search for ...">
-                                            <div class="input-group-append"><button class="btn btn-primary py-0" type="button"><i class="fas fa-search"></i></button></div>
-                                        </div>
-                                    </form>
-                                </div>
-                            </li>
-                            <li class="nav-item dropdown no-arrow mx-1" role="presentation"></li>
-                            <li class="nav-item dropdown no-arrow mx-1" role="presentation">
-                                <div class="shadow dropdown-list dropdown-menu dropdown-menu-right" aria-labelledby="alertsDropdown"></div>
-                            </li>
-                            <div class="d-none d-sm-block topbar-divider"></div>
-                            <li class="nav-item dropdown no-arrow" role="presentation"></li>
-                        </ul>
-                    </div>
-                </nav>
+<!-- Top menu on small screens -->
+<header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
+  <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
+  <span>Company Name</span>
+</header>
 
-                <section id="portfolio" class="bg-light">
-                    <div class="container">
-                        <div class="row">
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-6 col-md-4 portfolio-item">
-                                <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
-                                    <div class="portfolio-hover">
-                                        <div class="portfolio-hover-content"><i class="fa fa-plus fa-3x"></i></div>
-                                    </div><img class="img-fluid" src="https://da.lnwfile.com/dowglm.jpg"></a>
-                                <div class="portfolio-caption">
-                                    <h4>HG MCGILLIS'S SCHWALBE GRAZE</h4>
-                                    <p class="text-muted">340.00 บาท</p>
-                                    <div class="blockBottom"><div class="blockLeft"><div class="blockRight"><div class="blockCenter"></div></div></div></div>
-                                   
-                                </div>
-                            </div>
-                            <div class="col-sm-6 col-md-4 portfolio-item">
-                                <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-                                    <div class="portfolio-hover">
-                                        <div class="portfolio-hover-content"><i class="fa fa-plus fa-3x"></i></div>
-                                    </div><img class="img-fluid" src="https://da.lnwfile.com/zs51t8.jpg"></a>
-                                <div class="portfolio-caption">
-                                    <h4>HG GRAZE CUSTOM</h4>
-                                    <p class="text-muted">340.00 บาท</p>
-                                </div>
-                            </div>
-                            <div class="col-sm-6 col-md-4 portfolio-item">
-                                <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
-                                    <div class="portfolio-hover">
-                                        <div class="portfolio-hover-content"><i class="fa fa-plus fa-3x"></i></div>
-                                    </div><img class="img-fluid" src="https://da.lnwfile.com/uktzl4.jpg"></a>
-                                <div class="portfolio-caption">
-                                    <h4>HG GUNDAM BARBATOS LUPUS REX</h4>
-                                    <p class="text-muted">480.00 บาท</p>
-                                </div>
-                            </div>
-                            <div class="col-sm-6 col-md-4 portfolio-item">
-                                <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
-                                    <div class="portfolio-hover">
-                                        <div class="portfolio-hover-content"><i class="fa fa-plus fa-3x"></i></div>
-                                    </div><img class="img-fluid" src="https://da.lnwfile.com/f38m4x.jpg"></a>
-                                <div class="portfolio-caption">
-                                    <h4>PG RX-0 UNICORN GUNDAM</h4>
-                                    <p class="text-muted">6,800.00 บาท</p>
-                                </div>
-                            </div>
-                            <div class="col-sm-6 col-md-4 portfolio-item">
-                                <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-                                    <div class="portfolio-hover">
-                                        <div class="portfolio-hover-content"><i class="fa fa-plus fa-3x"></i></div>
-                                    </div><img class="img-fluid img-fluid" src="https://da.lnwfile.com/h490rp.jpg"></a>
-                                <div class="portfolio-caption">
-                                    <h4>RG WING GUNDAM ZERO EW</h4>
-                                    <p class="text-muted">850.00 บาท</p>
-                                </div>
-                            </div>
-                            <div class="col-sm-6 col-md-4 portfolio-item">
-                                <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-                                    <div class="portfolio-hover">
-                                        <div class="portfolio-hover-content"><i class="fa fa-plus fa-3x"></i></div>
-                                    </div><img class="img-fluid" src="https://da.lnwfile.com/dbiu5l.jpg"></a>
-                                <div class="portfolio-caption">
-                                    <h4>MG UNICORN GUNDAM 02 BANSHEE VER KA</h4>
-                                    <p class="text-muted">1,700.00 บาท</p>
-                                </div>
-                            </div>
-                        </div>
+<!-- Overlay effect when opening sidebar on small screens -->
+<div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
-                <div class="container-fluid">
-                    <div class="d-sm-flex justify-content-between align-items-center mb-4"></div>
-                </div>
-            </div>
-            <footer class="bg-white sticky-footer"></footer>
-        </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a></div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
-    <script src="assets/js/theme.js"></script>
+<!-- !PAGE CONTENT! -->
+<div class="w3-main" style="margin-left:340px;margin-right:40px">
+
+  <!-- Header -->
+  <div class="w3-container" style="margin-top:80px" id="showcase">
+    <h1 class="w3-jumbo"><b>GUNDAM</b></h1>
+    <h1 class="w3-xxxlarge w3-text-red"><b>List.</b></h1>
+    <hr style="width:50px;border:5px solid red" class="w3-round">
+  </div>
+  
+  <!-- Photo grid (modal) -->
+  <div class="w3-row-padding">
+    <div class="w3-half">
+      <img src="https://da.lnwfile.com/dowglm.jpg" style="width:100%" onclick="onClick(this)" alt="Concrete meets bricks">
+      <img src="https://da.lnwfile.com/uktzl4.jpg" style="width:100%" onclick="onClick(this)" alt="White walls with designer chairs">
+    </div>
+
+    <div class="w3-half">
+      <img src="https://da.lnwfile.com/zs51t8.jpg" style="width:100%" onclick="onClick(this)" alt="Windows for the atrium">
+      <img src="https://da.lnwfile.com/dbiu5l.jpg" style="width:100%" onclick="onClick(this)" alt="Bedroom and office in one space">
+  </div>
+
+  <!-- Modal for full size images on click-->
+  <div id="modal01" class="w3-modal w3-black" style="padding-top:0" onclick="this.style.display='none'">
+    <span class="w3-button w3-black w3-xxlarge w3-display-topright">×</span>
+    <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
+      <img id="img01" class="w3-image">
+      <p id="caption"></p>
+    </div>
+  </div>
+
+  
+ 
+
+
+
 </body>
-
 </html>
